folllow-up V0 part2 + checkpo,tPart3_CHECKPOIN3